Fix issue #7242119 and #7242008.
Issue #7242119 Permissions UI: "may cost you money" text color in gold
Issue #7242008 Permissions UI: add coin icon for permissions that cost money

Change-Id: I900b89e96f0a5ae6b686deecdab38d150d39b202

--- a/core/res/res/layout/app_permission_item_money.xml
+++ b/core/res/res/layout/app_permission_item_money.xml
@@ -55,9 +55,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/perm_name"
-            android:scaleType="fitCenter" />
+            android:layout_alignBottom="@+id/perm_money_label"
+            android:scaleType="fitCenter"
+            android:src="@android:drawable/ic_coins_s" />
         <TextView
+            android:id="@+id/perm_money_label"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textSize="16sp"
             android:textColor="@color/perms_costs_money"
@@ -65,6 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/perm_money_icon"
             android:layout_below="@id/perm_name"
+            android:layout_marginStart="8dp"
             android:text="@string/perm_costs_money" />
     </RelativeLayout>
 
