--- a/core/res/res/values/dimens.xml
+++ b/core/res/res/values/dimens.xml
@@ -269,4 +269,7 @@
     <!-- Size of margin on the right of keyguard's status view -->
     <dimen name="kg_status_line_font_right_margin">32dp</dimen>
 
+    <!-- Touch slop for the global toggle accessibility gesture -->
+    <dimen name="accessibility_touch_slop">80dip</dimen>
+
 </resources>
