--- a/packages/SystemUI/res/layout/quick_settings_tile_user.xml
+++ b/packages/SystemUI/res/layout/quick_settings_tile_user.xml
@@ -18,6 +18,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
+        android:id="@+id/user_imageview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/ic_qs_default_user"
