--- a/core/res/res/values/attrs.xml
+++ b/core/res/res/values/attrs.xml
@@ -5773,4 +5773,11 @@
         <attr name="scrollIndicatorPaddingRight" format="dimension" />
     </declare-styleable>
 
+    <declare-styleable name="KeyguardGlowStripView">
+        <attr name="dotSize" format="dimension" />
+        <attr name="numDots" format="integer" />
+        <attr name="glowDot" format="reference" />
+        <attr name="leftToRight" format="boolean" />
+    </declare-styleable>
+
 </resources>
