--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -2069,4 +2069,5 @@
   <public type="attr" name="addPrintersActivity" />
   <public type="attr" name="vendor" />
   <public type="attr" name="category" />
+  <public type="attr" name="isAsciiCapable" />
 </resources>
