uicc : add config_stkNoAlphaUsrCnf to config.xml
Per 3GPP specification 102.223,
if the alpha identifier is not provided by the UICC,
the terminal MAY give information to the user.
set to false if we need to show user confirmation
when alpha identifier is not provided by the UICC.

Change-Id: Iece01f3775baf2c6438776f899ed53b1f1fb942f

Conflicts:
	core/res/res/values/config.xml

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1207,4 +1207,7 @@
     <!-- Default Gravity setting for the system Toast view. Equivalent to: Gravity.CENTER_HORIZONTAL | Gravity.BOTTOM -->
     <integer name="config_toastDefaultGravity">0x00000051</integer>
 
+    <!-- set to false if we need to show user confirmation
+         when alpha identifier is not provided by the UICC -->
+    <bool name="config_stkNoAlphaUsrCnf">true</bool>
 </resources>
