--- a/packages/PrintSpooler/res/layout/print_job_config_activity.xml
+++ b/packages/PrintSpooler/res/layout/print_job_config_activity.xml
@@ -34,12 +34,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
             android:layout_marginLeft="32dip"
+            android:layout_marginTop="32dip"
             android:layout_marginRight="32dip"
             android:layout_marginBottom="12dip"
             android:layout_row="0"
             android:layout_column="0"
             android:layout_columnSpan="2"
-            android:minHeight="?android:attr/listPreferredItemHeightSmall">
+            android:minHeight="?android:attr/listPreferredItemHeight">
         </Spinner>
 
         <!-- Copies -->
@@ -57,7 +58,8 @@
             android:layout_gravity="bottom"
             android:inputType="numberDecimal"
             android:selectAllOnFocus="true"
-            android:minWidth="150dip">
+            android:minWidth="150dip"
+            android:minHeight="?android:attr/listPreferredItemHeight">
         </view>
 
         <TextView
@@ -86,7 +88,8 @@
             android:layout_marginBottom="12dip"
             android:layout_row="2"
             android:layout_column="1"
-            android:minWidth="150dip">
+            android:minWidth="150dip"
+            android:minHeight="?android:attr/listPreferredItemHeight">
         </Spinner>
 
         <TextView
@@ -114,7 +117,8 @@
             android:layout_marginBottom="12dip"
             android:layout_row="4"
             android:layout_column="0"
-            android:minWidth="150dip">
+            android:minWidth="150dip"
+            android:minHeight="?android:attr/listPreferredItemHeight">
         </Spinner>
 
         <TextView
@@ -142,7 +146,8 @@
             android:layout_marginBottom="12dip"
             android:layout_row="4"
             android:layout_column="1"
-            android:minWidth="150dip">
+            android:minWidth="150dip"
+            android:minHeight="?android:attr/listPreferredItemHeight">
         </Spinner>
 
         <TextView
@@ -169,7 +174,8 @@
             android:layout_marginRight="12dip"
             android:layout_row="6"
             android:layout_column="0"
-            android:minWidth="150dip">
+            android:minWidth="150dip"
+            android:minHeight="?android:attr/listPreferredItemHeight">
         </Spinner>
 
         <view
@@ -186,10 +192,12 @@
             android:minWidth="150dip"
             android:hint="@string/pages_range_example"
             android:inputType="textNoSuggestions"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:minHeight="?android:attr/listPreferredItemHeight">
         </view>
 
         <TextView
+            android:id="@+id/page_range_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dip"
@@ -231,7 +239,8 @@
             android:layout_columnSpan="2"
             android:text="@string/print_preview"
             android:gravity="left|center_vertical"
-            android:background="?android:attr/selectableItemBackground">
+            android:background="?android:attr/selectableItemBackground"
+            android:minHeight="?android:attr/listPreferredItemHeight">
         </Button>
 
         <ImageView
@@ -269,7 +278,8 @@
             android:layout_columnSpan="2"
             android:padding="0dip"
             android:text="@string/print_button"
-            android:background="?android:attr/selectableItemBackground">
+            android:background="?android:attr/selectableItemBackground"
+            android:minHeight="?android:attr/listPreferredItemHeight">
         </Button>
 
     </GridLayout>
