--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -2068,5 +2068,5 @@
   <public type="attr" name="sspPattern" />
   <public type="attr" name="addPrintersActivity" />
   <public type="attr" name="vendor" />
-  <public type="attr" name="paymentService" />
+  <public type="attr" name="category" />
 </resources>
